--- a/automatization/DivPositioning/test.html
+++ b/automatization/DivPositioning/test.html
@@ -1,1 +1,16 @@
-<div>
+<div id="el-0" class="container">
+	<div id="el-1" class="row el-1">
+		<div id="el-2" class="col el-2">
+		</div>
+		<div id="el-3" class="col el-3">
+		</div>
+		<div id="el-4" class="col el-4">
+		</div>
+	</div>
+	<div id="el-5" class="row el-5">
+		<div id="el-6" class="col el-6">
+		</div>
+		<div id="el-7" class="col el-7">
+		</div>
+	</div>
+</div>
