--- a/test.html
+++ b/test.html
@@ -13,21 +13,23 @@
 
 <body>
 	
-	<div class="test-main-container">
-		<div class="test-part1">
-			
+	<div id="el-0" class="test-main-container">
+		<div id="el-1" class="row el-1">
+			<div id="el-2" class="col el-2">
+			</div>
+			<div id="el-3" class="col el-3">
+			</div>
+			<div id="el-4" class="col el-4">
+			</div>
 		</div>
-		
-		<div class="test-part2">
+		<div id="el-5" class="row el-5">
+			<div id="el-6" class="col el-6">
+			</div>
+			<div id="el-7" class="col el-7">
+			</div>
 		</div>
-
-		<div class="test-part3">
-		</div>
-		
-		<div class="test-part4">
-		</div>
-
 	</div>
+
 	
 </body>
 
