working automatization version. generated index.html

--- a/automatization/DivPositioning/automated-index.html
+++ b/automatization/DivPositioning/automated-index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="styles/common.css" />
-	<link rel="stylesheet" href="styles/test.css" />
+	<link rel="stylesheet" href="styles/automated-index.css" />
 	<title>Homepage</title>
 </head>
 
@@ -16,5 +16,6 @@
 		</div>
 	</div>
 	<div id="el-3" class="row el-3">
+	
 	</div>
 </div>
