--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 	<!-- ============LOGO========== -->
 	<div id="el-14" class="row row-15">
-		<a href="index.html">
+		<a href="index.html">	
 			<div id="el-15" class="col col-60 logo-container">
 			</div>
 		</a>
@@ -34,19 +34,19 @@
 			</div>
 
 			<div id="el-18" class="col col-10 main-menu-item">
-				<a href="#">&lt;Home&gt;</a>
+				<a href="index.html">&lt;Home&gt;</a>
 			</div>
 			
 			<div id="el-19" class="col col-10 main-menu-item">
-				<a href="#">&lt;Tables&gt;</a>
+				<a href="tables.html">&lt;Tables&gt;</a>
 			</div>
 			
 			<div id="el-20" class="col col-10 main-menu-item">
-				<a href="#">&lt;Links&gt;</a>
+				<a href="links.html">&lt;Links&gt;</a>
 			</div>
 			
 			<div id="el-21" class="col col-10 main-menu-item">
-				<a href="#">&lt;Contact&gt;</a>
+				<a href="contact.html">&lt;Contact&gt;</a>
 			</div>
 			
 			<div id="el-22" class="col col-30">
@@ -64,6 +64,7 @@
 			</div>
 		</div>
 	</div>	
+	
 	<!-- ============endof MENU========== -->
 	
 	
@@ -72,6 +73,7 @@
 		<div id="el-32" class="col col-15 el-32">
 		</div>
 		<div id="el-33" class="col col-70 el-33">
+			<!--
 			<div id="el-34" class="row row-15 el-34">
 				<div id="el-35" class="col col-25 el-35">
 				</div>
@@ -79,7 +81,7 @@
 					<div id="el-37" class="row row-25 el-37">
 					</div>
 					<div id="list-title" class="row row-50 text-stroke">
-						<!-- Latest artworks -->
+						
 					</div>
 					<div id="el-39" class="row row-25 el-39">
 					</div>
@@ -87,6 +89,7 @@
 				<div id="el-40" class="col col-25 el-40">
 				</div>
 			</div>
+			-->
 			<div id="el-41" class="row row-5 el-41">
 			</div>
 			
