--- a/index.html
+++ b/index.html
@@ -307,6 +307,8 @@
 </div>
 <footer>
 	<script src="scripts/common.js"></script>
+	<script src="scripts/contact.js"></script>
+	<script src="scripts/tables.js"></script>
 </footer>
 
 
